# wakatime-notion-diary

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: diary.yml  lint.yaml
app/: Cargo.toml
app/src/: logic.rs  main.rs
core/: Cargo.toml
notion/: Cargo.toml
notion/src/: api.rs  database.rs  lib.rs  page.rs
notion/src/database/: create_page.rs  get_or_create_page.rs  get_page.rs
notion/src/database/create_page/: error.rs  response.rs
notion/src/database/get_or_create_page/: error.rs  response.rs
notion/src/database/get_page/: error.rs  response.rs
notion/src/database/models/: page.rs
notion/src/page/: append_blocks.rs
wakatime/: Cargo.toml
wakatime/src/: lib.rs  summaries.rs
wakatime/src/summaries/: errors.rs  request.rs  response.rs
wakatime/src/summaries/response/: data.rs  grand_total.rs  language.rs  projects.rs
