[package]
name = "wakatime-notion-diary-app"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde", "std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
wakatime-notion-diary-wakatime = { path = "../wakatime" }
wakatime-notion-diary-notion = { path = "../notion" }
uuid = { version = "1.3.0", features = ["serde"] }
dotenv = "0.15.0"
